Fix dependencies